# SnapPy

./: .cirrus.yml  .gitignore  .hgignore  .hgsub  .hgsubstate  .travis.yml  CI_README  CyOpenGL.pxi  CyOpenGL.pyx  CyPari.pyx  CyTwister.pyx  MANIFEST.in  README  README.rst  SnapPeaCy.pyx  SnapPy.pxi  SnapPy.pyx  SnapPyHP.pyx  SnapPy_app.py  SnapPycore.pxi  SnapPyfont.h  TODO  UCS2hack.h  appveyor.yml  bitbucket-pipelines.yml  broken_pyproject.toml  build_pari.sh  build_pari_linux.sh  build_togl.py  build_togl.sh  build_togl_linux.sh  dirichlet_patch.py  es.patch  glpixelfont.h  mini_pari.h  numbers.pxi  pyproject.toml  setup.py  test_canonical.ipynb  todo.txt  (+1 more)
JeffsOldUI/: SnapPeaGUI.py
SnapPyApp/: SnapPy.py  SnapPython.py  __boot__.py  dmg-maker.py  make.py  push_results.py  recipe.py  release.py  setup.py  standalone.py
SnapPyDesktop/: README
SnapPyExe/: InnoSnapPy.iss  SnapPy.py  make.py  setup.py
Twister/: CyTwister.pyx  README  global.cpp  global.h  makefile  parsing.cpp  parsing.h  setup.py  twister.cpp  twister.h  twister_main.cpp  twister_main.h
Twister-old/: README  setup.py
addl_code/: addl_code.h  braid.c  braid.cc  choose_gen_helper.c  combinatorial_bases.c  complex_volume.c  crossing_signs.cc  dt2snap.cc  gluing_equations.c  gluing_equations_pgl.c  gluing_equations_pgl.h  gluing_equations_psl.c  gluing_equations_psl.h  link_diagram.cc  ptolemy_equations.c  ptolemy_equations.h  ptolemy_types.c  ptolemy_types.h  sendable.c  set_tet_shapes.c
cython/: Orb.pyx  SnapPy.pxi  SnapPy.pyx  SnapPyHP.pyx  SnapPycore.pxi  UCS2hack.h  Verify.pyx  inline.h  linkage.h  warnings.h
database_tools/: DT_tools.py  linkfiles.py  make_db.py
dev/: GLSLManifoldInsideView.py  GLSLPerspectiveTest.py  Jeff_kernel_changes.txt  Mac_ttk  SnapPyNumberBug.py  Verify.pyx  build_and_test_in_sage.bash  ccache.py  census.py  character_vars.py  complex_volume_testing.py  conda_environment.yml  cs_prob.py  db_codecs.py  db_utils.py  dihydrated.py  draw_geodesic.py  euclidean_torus.py  fef_1.py  holonomy.py  holonomy_test.py  imageShaderTesting.py  isosig.py  isosig_leak.py  krawczykCertifiedShapesEngine.py  lookup.py  macos_wheel_tag_issue.py  make_db.py  make_db_links.py  margulis_number.py  mat.sage  minimal_keys.py  numbers_stress.py  pickle-test.py  plans.txt  raytracing_data.py  reg.py  snappari.py  speed.py  test_vericlosed.py  (+3 more)
dev/symplectic_basis/: CMakeLists.txt  graph  graph.py  large-db  small-db  symplectic_basis_main.c  symplectic_basis_old.h  symplectic_basis_test.c  test_base.py  test_linux.py  test_windows.py
dev/symplectic_basis/CuspedCensusData/: knot-0.tri  knot-1.tri  knot-799.tri  link-0.tri  link-1.tri  link-105538.tri  link-115956.tri  link-159285.tri  link-179680.tri  link-3862.tri  link-395567.tri  link-60819.tri  link-67864.tri  link-70k.tri  link-81188.tri  link-83001.tri  link-random.tri  link-random100.tri
dev/symplectic_basis/file_formats/: GeneratorsFileFormat  LinkProjectionFileFormat  ReadMe  TriangulationFileFormat
doc-source/: Makefile  additional_classes.rst  censuses.rst  conf.py  credits.rst  development.rst  index.rst  installing.rst  manifold.rst  manifoldhp.rst  news.rst  plink.rst  screenshots.rst  snap.rst  snappy.rst  spherogram.rst  todo.rst  tutorial.rst
doc_src/: Makefile  add_doc_to_wheel.py  add_doc_to_wheels.py  additional_classes.rst  bugs.rst  build_doc_add_to_wheel.py  censuses.rst  conf-awesome.py  conf-classic.py  conf-furo.py  conf-rtd.py  conf.py  credits.rst  development-draft.rst  development.rst  hikmot2.rst  hikmot2CertifiedShapesEngine.rst  hikmot2Methods.rst  index.rst  installing-new.rst  installing.rst  manifold.rst  manifoldhp.rst  news.rst  other.rst  plink.rst  (+18 more)
(+2021 files in other folders)
